--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
-  max-width: 700px;
-  margin: 0 auto;
+  padding: 20px;
+}
+@media only screen and (max-width: 500px) {
+  .App {
+    padding: 5px;
+  }
 }
